# PerforatedAI

./: .gitattributes  .gitignore  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dendritefinal.py  DendriticBERT_ Parameter-Efficient BERT with Dendritic Optimization (1).md  README.md  Results.csv  architecture_diagram.d2  data_loader.py  dataset.py  dendritic_bert_core.py  evaluate.py  finaltrain.py  get_wandb_results.py  hackathon_results.json  links.md  main.py  mnist_perforatedai.py  model.py  project_structure.txt  requirements.txt  setup.py  setupCython.py  summary_report.txt  test_pai_init.py  train.py  train_dendritic_bert.py
Examples/hackathonProjects/Dendritic Stock Prediction Model/: .gitignore  README.md  dendritic_main.py  download.py  main.py  model.py  pyproject.toml  stocks.py
Examples/hackathonProjects/Dendritic Stock Prediction Model/model_info/: model_infoScores.csv  model_infoTimes.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0Best PBScores.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0Scores.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0Times.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0best_test_scores.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0learning_rate.csv  model_info_20.01.2026.17.00.43_noImprove_lr_0param_counts.csv  model_info_beforeSwitch_0Best PBScores.csv  model_info_beforeSwitch_0Scores.csv  model_info_beforeSwitch_0Times.csv  model_info_beforeSwitch_0best_test_scores.csv  model_info_beforeSwitch_0learning_rate.csv  (+18 more)
Examples/hackathonProjects/dendrites_qwen/: .gitignore  README.md  main.py  pyproject.toml
(+2402 files in other folders)
