[project]
name = "dendritic-pytorch"
version = "0.1.0"
description = "Qwen + Perforated AI Dendrites: Improving LLM performance with artificial dendrites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "peft>=0.18.1",
    "perforatedai",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "transformers>=4.57.6",
    "wandb>=0.24.0",
]

[tool.uv.sources]
perforatedai = { git = "https://github.com/PerforatedAI/PerforatedAI.git" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
